src/components/OverviewCard/overview-card-group.scss
.overview-card-group {
  margin: $spacing-05 0 $spacing-07;
}

.overview-card-group .overview-card {
  border: 1px solid transparent;

  @include carbon--breakpoint('lg') {
    border-left: 1px solid $carbon--gray-20;
  }
}

//always and forever, the first item has no left border
.overview-card-group .#{$prefix}--col-lg-4:first-child .overview-card {
  border-left: 1px solid transparent;
}

@include carbon--breakpoint-down('lg') {
  .overview-card-group .#{$prefix}--col-lg-4:nth-child(even) .overview-card {
    border-left: 1px solid $carbon--gray-20;
  }

  //selects every item after the first 2
  .overview-card-group .#{$prefix}--col-lg-4:nth-child(n + 3) .overview-card {
    border-top: 1px solid $carbon--gray-20;
  }
}

@include carbon--breakpoint-between('lg', 'max') {
  //selects every item after the first 3
  .overview-card-group .#{$prefix}--col-lg-4:nth-child(n + 4) .overview-card {
    border-top: 1px solid $carbon--gray-20;
  }

  //selects every third item starting at the second item (4, 7, 10, 13, 16...)
  .overview-card-group .#{$prefix}--col-lg-4:nth-child(3n + 4) .overview-card {
    border-left: 1px solid transparent;
  }
}

@include carbon--breakpoint('max') {
  //selects every fourth item starting at the second item
  .overview-card-group .#{$prefix}--col-lg-4:nth-child(3n + 5) .overview-card {
    border-left: 1px solid transparent;
  }

  //selects every item after the first 4
  .overview-card-group .#{$prefix}--col-lg-4:nth-child(n + 5) .overview-card {
    border-top: 1px solid $carbon--gray-20;
  }
}

